--- a/vue-movie-app/package.json
+++ b/vue-movie-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest --no-watchman --watchAll"
   },
   "dependencies": {
     "axios": "0.21.1",
@@ -20,12 +21,17 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-vuex": "4.5.12",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "1.2.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "26.6.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "26.6.3",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "2.3.1",
+    "vue-jest": "3.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
